[gd_scene load_steps=28 format=2]

[ext_resource path="res://menus/mainmenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/alagard.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/UI_Flat_Button_Large_Lock_01a2.png" type="Texture" id=3]
[ext_resource path="res://ui/theme_default/MainMenuFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/theme_default/MainMenu.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/theme_default/MainMenu_hovered.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/theme_default/MainMenu_pressed.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/UI_Flat_Banner_01_Downward.png" type="Texture" id=8]
[ext_resource path="res://menus/mainmenu/BackButton.tres" type="StyleBox" id=9]
[ext_resource path="res://menus/mainmenu2.png" type="Texture" id=10]
[ext_resource path="res://menus/mainmenu1.png" type="Texture" id=11]
[ext_resource path="res://menus/spacebg.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ) ],
"loop": true,
"name": "church",
"speed": 3.0
} ]

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -86, -112 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Options/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "moving title"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -86, -112 ), Vector2( -86, -121 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "show_menu"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -86, -112 ), Vector2( -85, -105 ), Vector2( -86, -112 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "transition"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=9]
size = 29
outline_size = 2
extra_spacing_char = 6
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 1, 1, 0.701961 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 0.92549, 0.929412, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 0.92549, 0.929412, 1 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 0.92549, 0.929412, 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 1, 1, 0.705882 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 96, 32 )
modulate_color = Color( 1, 1, 1, 0.705882 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -273.0
margin_top = -196.0
margin_right = 307.0
margin_bottom = 172.0
rect_scale = Vector2( 1.14085, 1.07322 )
texture = ExtResource( 12 )
expand = true
flip_h = true

[node name="mainSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 245, 34 )
frames = SubResource( 17 )
animation = "church"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
"anims/moving title" = SubResource( 14 )
anims/show_menu = SubResource( 16 )
anims/transition = SubResource( 15 )

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -86.0
margin_top = -112.0
margin_right = 202.0
margin_bottom = -69.0
custom_colors/font_color = Color( 0.196078, 0.415686, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "The One Wizard"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -34.0
margin_right = 94.0
margin_bottom = 34.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 125.0
margin_bottom = 28.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Start"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 125.0
margin_bottom = 60.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Load"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 125.0
margin_bottom = 92.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 125.0
margin_bottom = 124.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = ExtResource( 5 )
text = "Quit"

[node name="Options" type="Control" parent="."]
visible = false
margin_left = -265.0
margin_top = -181.0
margin_right = 377.0
margin_bottom = 182.0

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -22.0
margin_right = 38.0
margin_bottom = 22.0

[node name="Video" type="Button" parent="Options/VBoxContainer"]
margin_right = 76.0
margin_bottom = 28.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
text = "Video"

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
margin_top = 32.0
margin_right = 76.0
margin_bottom = 60.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
text = "Audio"

[node name="BackButton" type="Button" parent="Options"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -25.0
margin_right = 47.5
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
margin_left = -265.0
margin_top = -181.0
margin_right = 374.0
margin_bottom = 181.0

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -40.0
margin_right = 49.0
margin_bottom = 40.0

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_right = 138.0
margin_bottom = 92.0

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
margin_right = 138.0
margin_bottom = 28.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Full Screen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
margin_top = 32.0
margin_right = 138.0
margin_bottom = 60.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
margin_top = 64.0
margin_right = 138.0
margin_bottom = 92.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Vsync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_left = 142.0
margin_right = 166.0
margin_bottom = 92.0

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_right = 24.0
margin_bottom = 24.0
focus_mode = 0

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0
focus_mode = 0

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0
focus_mode = 0

[node name="BackButtonFromVideo" type="Button" parent="Video"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.5
margin_top = -27.0
margin_right = 35.5
margin_bottom = 1.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
margin_left = -264.0
margin_top = -180.0
margin_right = 373.0
margin_bottom = 181.0

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 153.0
margin_right = 104.0
margin_bottom = 212.0

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_right = 113.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_right = 113.0
margin_bottom = 28.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_top = 32.0
margin_right = 113.0
margin_bottom = 60.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Music"

[node name="SoundFX" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_top = 64.0
margin_right = 113.0
margin_bottom = 92.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_left = 117.0
margin_top = 13.0
margin_right = 214.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_right = 97.0
margin_bottom = 16.0
min_value = -30.0
max_value = 0.0

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_top = 20.0
margin_right = 97.0
margin_bottom = 36.0
min_value = -30.0
max_value = 0.0

[node name="SoundFX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_top = 40.0
margin_right = 97.0
margin_bottom = 56.0
min_value = -30.0
max_value = 0.0

[node name="BackButtonFromAudio" type="Button" parent="Audio"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -33.5
margin_top = -27.0
margin_right = 34.5
margin_bottom = 1.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "Back"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Options/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_VSync_toggled"]
[connection signal="pressed" from="Video/BackButtonFromVideo" to="." method="_on_BackButtonFromVideo_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/SoundFX" to="." method="_on_SoundFX_value_changed"]
[connection signal="pressed" from="Audio/BackButtonFromAudio" to="." method="_on_BackButtonFromAudio_pressed"]
